# loom

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/cli/: args.rs
src/cli/commands/: clear.rs  commit.rs  compact.rs  config.rs  cost.rs  help.rs  memory.rs  mod.rs  model.rs  plan.rs  session.rs
src/config/: memory.rs  mod.rs  paths.rs  settings.rs
src/engine/: compaction.rs  context.rs  cost_tracker.rs  messages.rs  mod.rs  query.rs  query_engine.rs  streaming.rs
src/git/: attribution.rs  mod.rs  status.rs
src/permissions/: bash_classifier.rs  filesystem.rs  mod.rs  mode.rs  prompt.rs  rules.rs
src/provider/: anthropic.rs  auth.rs  azure.rs  cohere.rs  deepseek.rs  galadriel.rs  gemini.rs  groq.rs  huggingface.rs  hyperbolic.rs  llamafile.rs  mira.rs  mistral.rs  mod.rs  models.rs  moonshot.rs  ollama.rs  openai.rs  openrouter.rs  perplexity.rs  together.rs  vertex.rs  xai.rs
src/state/: app_state.rs  mod.rs  session.rs  task_state.rs
src/tools/: agent.rs  ask_user.rs  bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  mod.rs  registry.rs  web_fetch.rs  web_search.rs
src/tools/tasks/: create.rs  get.rs  list.rs  update.rs
src/tui/: app.rs  completion.rs  event.rs  file_refs.rs  input.rs  markdown.rs  message_buffer.rs  mod.rs  renderer.rs  spinner.rs  status_bar.rs  theme.rs
src/tui/widgets/: completion_popup.rs  footer.rs  header.rs  mod.rs  spinner_line.rs
src/utils/: file.rs  format.rs  mod.rs  sandbox.rs  tokens.rs
