[package]
name = "loom"
version = "0.1.0"
edition = "2024"
description = "AI-powered coding assistant CLI using Google Gemini via Vertex AI"
license = "MIT"

[dependencies]
# AI framework
rig-core = { version = "0.34", features = ["derive"] }
rig-vertexai = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Terminal UI
ratatui = "0.29"
tui-textarea = "0.7"
crossterm = "0.28"
syntect = "5"
pulldown-cmark = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Filesystem
glob = "0.3"
ignore = "0.4"
walkdir = "2"

# Git
gix = { version = "0.68", default-features = false, features = ["basic", "status"] }

# Google Cloud auth
google-cloud-auth = "1.0"

# Error handling
thiserror = "2"
anyhow = "1"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
shellexpand = "3"
tempfile = "3"
schemars = "1"
regex = "1"
strip-ansi-escapes = "0.2"
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
